--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,20 @@
 spring:
+  main:
+    banner-mode-on-startup: false
+    profiles:
+      active: swagger
+    http:
+      cors:
+        enabled: true
+    logging:
+      level: INFO
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/appdatabase?authSource=admin
 
 
 server:
-  port: 8081
+  port: 8080
 
 app:
   security:
